Authlib cleanup